upload source code

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -195,7 +195,7 @@ a:active {
 }
 #wallpaper {
     min-height: 500px;
-    background: url('/assets/img/wallpaper/wallpaper.jpg') top center / cover no-repeat;
+    background: url('./img/wallpaper/wallpaper.jpg') top center / cover no-repeat;
     width: 100%;
     padding-top: calc(100% * 2 / 3);
     margin-top: 46.5px;
@@ -231,14 +231,14 @@ a:active {
 }
 #intro .intro-img {
     padding-top: 36%;
-    background: url('/assets/img/intro/intro-img.jpg') top center / cover no-repeat;
+    background: url('./img/intro/intro-img.jpg') top center / cover no-repeat;
 }
 #about {
     background-color: #b1a2ee;
 }
 #about .about-img {
     padding-top: 50%;
-    background: url('/assets/img/about/about-img.jpg') top center / contain no-repeat;
+    background: url('./img/about/about-img.jpg') top center / contain no-repeat;
 }
 #about .profile-list {
     padding-left: 30px;
