--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -67,6 +67,10 @@ a:active {
     font-size: 20px;
     justify-content: center;
 }
+#header a:hover {
+    background-color: rgba(255,255,255,0.7);
+    color: #6527be;
+}
 #header .login {
     height: 100%;
     min-width: 300px;
@@ -119,7 +123,7 @@ a:active {
 #header .modal-container {
     border: 1px solid rgba(255,255,255,0);
     border-radius: 16px;
-    background-image: linear-gradient(45deg, #83a4d4, #b6fbff);
+    background-image: linear-gradient(135deg, #83a4d4, #b6fbff);
     width: 400px;
     max-width: calc(100% - 32px);
     min-height: 100px;
