--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,7 @@ html {
     font-family: nunito !important;
     scroll-behavior: smooth;
 }
+/*
 @media (min-width: 1024px) {
     .pc {
         display: block;
